--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
           rel="stylesheet">
 
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/accreditation.css">
+    <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
     <script src="js/parallax.js"></script>
@@ -28,7 +28,7 @@
         </a>
         <div class="menu-ul">
             <a class="menu-li" href="/about">About</a>
-            <a class="menu-li" href="/accreditation">Accreditation</a>
+            <a class="menu-li" href="/gallery">gallery</a>
             <a class="menu-li" href="/gallery">Gallery</a>
             <a class="menu-li" href="/careers">Careers</a>
         </div>
@@ -60,7 +60,7 @@
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a class="menu-li" href="/about">About</a>
-                <a class="menu-li" href="/accreditation">Accreditation</a>
+                <a class="menu-li" href="/gallery">gallery</a>
                 <a class="menu-li" href="/gallery">Gallery</a>
                 <a class="menu-li" href="/careers">Careers</a>
             </div>
@@ -72,11 +72,11 @@
 </header>
     <div class="section">
         <div class="content">
-            <section class="page" id="accreditation-1">
+            <section class="page" id="gallery-1">
                 <div class="container">
                     <div class="main">
                         <div class="head">
-                            <p class="title gradient-text">ACCREDITATION</p>
+                            <p class="title gradient-text">GALLERY</p>
                         </div>
                         <div class="image-gallery">
                             <div class="image-gallery-row">
@@ -95,6 +95,34 @@
                                 <div class="card">
                                     <img src="img/gallery/Indiacrete.jpeg"/>
                                     <p class="caption">Indiacrete</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/NewTM.jpeg"/>
+                                    <p class="caption">Indiacrete</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/p1.jpeg"/>
+                                    <p class="caption">TM</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/p2.jpeg"/>
+                                    <p class="caption">TM</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/p3.jpeg"/>
+                                    <p class="caption">TM</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/p4.jpeg"/>
+                                    <p class="caption">TM</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/p5.jpeg"/>
+                                    <p class="caption">TM</p>
+                                </div>
+                                <div class="card">
+                                    <img src="img/gallery/p6.jpeg"/>
+                                    <p class="caption">TM</p>
                                 </div>
                             </div>
                         </div>
