--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                                 <img src="img/face/leaders.jpeg" alt="hero"/>
                             </div>
                             <div class="desc">
-                                <p class="name">Mr. Manmeet Singh Bhamra & Mr. Chanmeet Singh Bhamra</p>
+                                <p class="name">Mr. Chanmeet Singh Bhamra & Mr. Manmeet Singh Bhamra</p>
                             </div>
                         </div>
                     </div>
