--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a class="menu-li" href="/about">About</a>
-                <a class="menu-li" href="/gallery">gallery</a>
+                <a class="menu-li" href="/accreditation">Accreditation</a>
                 <a class="menu-li" href="/gallery">Gallery</a>
                 <a class="menu-li" href="/careers">Careers</a>
             </div>
