--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <p class="pitch-text">INFRA GROWTH</p>
                     <p class="pitch-text">SINCE <span class="gradient-text">2014</span></p>
                     <div class="divider"></div>
+<!--                    ToDo: Justify-->
                     <p class="soft-pitch-text">
                         Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in
                         Mumbai Region since past 9 years. The Group has its own mobile fuel tankers and maintenance team
@@ -177,7 +178,7 @@
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                        <img src="img/inhouse.jpeg" alt="hero" class="company-2-img"/>
                     </div>
                     <div class="right-side">
                         <p class="title gradient-black-text">In-House Maintenance Team</p>
