--- a/accreditation.html
+++ b/accreditation.html
@@ -20,7 +20,7 @@
     <script src="js/parallax.js"></script>
 </head>
 <body id="about">
-    <header>
+<header>
     <div class="header container">
         <a class="brand-logo" href="/">
             <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
@@ -28,7 +28,7 @@
         </a>
         <div class="menu-ul">
             <a class="menu-li" href="/about">About</a>
-            <a class="menu-li" href="/accreditation">Accreditation</a>
+            <a class="menu-li active" href="/accreditation">Accreditation</a>
             <a class="menu-li" href="/gallery">Gallery</a>
             <a class="menu-li" href="/careers">Careers</a>
         </div>
