--- a/careers.html
+++ b/careers.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Bhamra Group of Companies</title>
     <link rel="icon" href="img/bhamra-logo.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/careers.css">
@@ -72,8 +75,11 @@
         <section class="page">
             <div class="container">
                 <div class="main">
-                    <p class="title">Careers</p>
-                    <p class="pitch">If you're ready to ditch the dated office cubicle paradigm, we have the solution</p>
+                    <div class="head">
+                        <p class="title gradient-text">CAREERS</p>
+                    </div>
+                    <p class="pitch">If you're ready to ditch the dated office cubicle paradigm, we have the
+                        solution</p>
                     <div class="offers-row">
                         <div class="offers-card">
                             <div class="offer-showcase">
@@ -116,7 +122,8 @@
                         <div class="content-side">
                             <p class="content-title">Ready to Join ?</p>
                             <p class="content-desc">If you are unable to find a suitable opening please do not worry!
-                                We are always up to discover new talents, kindly mail us your resume to hr@bhamragroup.com</p>
+                                We are always up to discover new talents, kindly mail us your resume to
+                                hr@bhamragroup.com</p>
                         </div>
                         <div class="cta-side">
                             <button class="primary-button">
@@ -128,26 +135,26 @@
             </div>
         </section>
     </div>
-    <div class="section footer-bg" id="footer">
-        <div class="contact-us">
-            <div class="content-side">
-                <p class="content-title gradient-text">Reach out!</p>
-                <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
-                    Govandi,
-                    Mumbai - 400 088</p>
-                <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
-                <p class="mail"><b>Email:</b> bhamragroup@gmail.com
-            </div>
-            <div class="cta-side">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6726500905793!2d72.9124947096736!3d19.04749202311294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6093a944e21%3A0x4100083198c7136f!2sSai%20Commercial%20Centre%20Co-op.%20Society%20Ltd.!5e0!3m2!1sen!2sin!4v1703481627768!5m2!1sen!2sin"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+<div class="section footer-bg" id="footer">
+    <div class="contact-us">
+        <div class="content-side">
+            <p class="content-title gradient-text">Reach out!</p>
+            <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
+                Govandi,
+                Mumbai - 400 088</p>
+            <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
+            <p class="mail"><b>Email:</b> bhamragroup@gmail.com
+        </div>
+        <div class="cta-side">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6726500905793!2d72.9124947096736!3d19.04749202311294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6093a944e21%3A0x4100083198c7136f!2sSai%20Commercial%20Centre%20Co-op.%20Society%20Ltd.!5e0!3m2!1sen!2sin!4v1703481627768!5m2!1sen!2sin"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
-    <footer class="footer-bg">
-        Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
-    </footer>
+</div>
+<footer class="footer-bg">
+    Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
+</footer>
 </body>
 </html>
 
