--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>Bhamra Group of Companies</title>
     <link rel="icon" href="img/bhamra-logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
