--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                        <img src="img/mision.jpg" alt="hero" class="company-2-img"/>
                     </div>
                     <div class="right-side">
                         <p class="title gradient-text">Our Mision</p>
@@ -181,7 +181,7 @@
                             the year 2030</p>
                     </div>
                     <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                        <img src="img/vision.png" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
