--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                        <img src="img/Home_Bhamra_Concrete_Private_Limited.jpg" alt="hero" class="company-2-img"/>
                     </div>
                     <div class="right-side">
                         <p class="title gradient-black-text">Bhamra Concrete Private Limited</p>
@@ -157,7 +157,7 @@
                             and hassle-free fuel supply, committed to enhancing convenience in every drop.</p>
                     </div>
                     <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                        <img src="img/Home_Fuelmen.jpg" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                             workflow.</p>
                     </div>
                     <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                        <img src="img/Home_Core_Competence_Taxi.jpg" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
             <div class="container">
                 <div class="main">
                     <div class="left-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                        <img src="img/Home_Core_Competence_Own_Fuel_Tanker.jpg" alt="hero" class="company-2-img"/>
                     </div>
                     <div class="right-side">
                         <p class="title gradient-black-text">Own Fueling Diesel Tankers</p>
@@ -243,7 +243,7 @@
                             workflow.</p>
                     </div>
                     <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                        <img src="img/Home_Core_Competence_Experience_Personnel.jpg" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
@@ -265,6 +265,7 @@
                         <img src="img/clients/Godrej_Client.png" alt="Godrej_Client" class="client-img"/>
                         <img src="img/clients/Client_skyway.jpg" alt="Client_skyway" class="client-img"/>
                         <img src="img/clients/Ultratech_client.png" alt="Ultratech_client" class="client-img"/>
+                        <img src="img/clients/aparna.png" alt="Aparna_client" class="client-img"/>
                     </div>
                 </div>
             </div>
