--- a/about.html
+++ b/about.html
@@ -36,12 +36,12 @@
     <div class="get-intouch">
       <div>
         <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i
-          aria-hidden="true" class="fa fa-facebook"></i></a>
+          class="fa fa-facebook" aria-hidden="true"></i></a>
         <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp"
                                                                 aria-hidden="true"></i></a>
         <a class="socials" href="mailto:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
       </div>
-      <!--            ToDo: check this-->
+      <!--ToDo: check this-->
       <a href="tel:+9102235647986">
         <button>
           GET IN TOUCH
@@ -63,7 +63,6 @@
         <a class="menu-li" href="/about">About</a>
         <a class="menu-li" href="/accreditation">Accreditation</a>
         <a class="menu-li" href="/gallery">Gallery</a>
-        <a class="menu-li" href="/careers">Careers</a>
       </div>
       <span class="hamburger-menu" onclick="openNav()">
                     <i class="fa fa-bars" aria-hidden="true"></i>
