--- a/gallery.html
+++ b/gallery.html
@@ -1,156 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Bhamra Group of Companies</title>
-    <link rel="icon" href="img/bhamra-logo.png" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Bhamra Group of Companies</title>
+  <link rel="icon" href="img/bhamra-logo.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap"
-          rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap"
-          rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/gallery.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/gallery.css">
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
-    <script src="js/parallax.js"></script>
+  <script src="js/parallax.js"></script>
 </head>
 <body id="about">
 <header>
-    <div class="header container">
-        <a class="brand-logo" href="/">
-            <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
-            <span>BHAMRA GROUP</span>
-        </a>
-        <div class="menu-ul">
-            <a class="menu-li" href="/about">About</a>
-            <a class="menu-li" href="/accreditation">Accreditation</a>
-            <a class="menu-li active" href="/gallery">Gallery</a>
-        </div>
-        <div class="get-intouch">
-            <div>
-                <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i
-                        class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp"
-                                                                        aria-hidden="true"></i></a>
-                <a class="socials" href="mailto:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-            </div>
-            <!--            ToDo: check this-->
-            <a href="tel:+9102235647986">
-                <button>
-                    GET IN TOUCH
-                </button>
-            </a>
-        </div>
-        <div>
-            <script>
-                function openNav() {
-                    document.getElementById("mySidenav").style.width = "100%";
-                }
+  <div class="header container">
+    <a class="brand-logo" href="/">
+      <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
+      <span>BHAMRA GROUP</span>
+    </a>
+    <div class="menu-ul">
+      <a class="menu-li" href="/about">About</a>
+      <a class="menu-li" href="/accreditation">Accreditation</a>
+      <a class="menu-li active" href="/gallery">Gallery</a>
+    </div>
+    <div class="get-intouch">
+      <div>
+        <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i
+          class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp"
+                                                                aria-hidden="true"></i></a>
+        <a class="socials" href="mailto:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+      </div>
+      <!--            ToDo: check this-->
+      <a href="tel:+9102235647986">
+        <button>
+          GET IN TOUCH
+        </button>
+      </a>
+    </div>
+    <div>
+      <script>
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "100%";
+        }
 
-                function closeNav() {
-                    document.getElementById("mySidenav").style.width = "0";
-                }
-            </script>
-            <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a class="menu-li" href="/about">About</a>
-                <a class="menu-li" href="/accreditation">Accreditation</a>
-                <a class="menu-li" href="/gallery">Gallery</a>
-                <a class="menu-li" href="/careers">Careers</a>
-            </div>
-            <span class="hamburger-menu" onclick="openNav()">
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+        }
+      </script>
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a class="menu-li" href="/about">About</a>
+        <a class="menu-li" href="/accreditation">Accreditation</a>
+        <a class="menu-li" href="/gallery">Gallery</a>
+        <a class="menu-li" href="/careers">Careers</a>
+      </div>
+      <span class="hamburger-menu" onclick="openNav()">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </span>
-        </div>
     </div>
+  </div>
 </header>
-    <div class="section">
-        <div class="content">
-            <section class="page" id="gallery-1">
-                <div class="container">
-                    <div class="main">
-                        <div class="head">
-                            <p class="title gradient-text">GALLERY</p>
-                        </div>
-                        <div class="image-gallery">
-                            <div class="image-gallery-row">
-                                <div class="card">
-                                    <img src="img/gallery/Ashok.jpeg"/>
-                                    <p class="caption">Ashok</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/Eicher.jpeg"/>
-                                    <p class="caption">Eicher</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/Godrej.jpeg"/>
-                                    <p class="caption">Godrej</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/Indiacrete.jpeg"/>
-                                    <p class="caption">Indiacrete</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/NewTM.jpeg"/>
-                                    <p class="caption">Indiacrete</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/p1.jpeg"/>
-                                    <p class="caption">TM</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/p2.jpeg"/>
-                                    <p class="caption">TM</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/p3.jpeg"/>
-                                    <p class="caption">TM</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/p4.jpeg"/>
-                                    <p class="caption">TM</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/p5.jpeg"/>
-                                    <p class="caption">TM</p>
-                                </div>
-                                <div class="card">
-                                    <img src="img/gallery/p6.jpeg"/>
-                                    <p class="caption">TM</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
-    <div class="section footer-bg" id="footer">
-        <div class="contact-us">
-            <div class="content-side">
-                <p class="content-title gradient-text">Reach out!</p>
-                <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
-                    Govandi,
-                    Mumbai - 400 088</p>
-                <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
-                <p class="mail"><b>Email:</b> bhamragroup@gmail.com
+<div class="section">
+  <div class="content">
+    <section class="page" id="gallery-1">
+      <div class="container">
+        <div class="main">
+          <div class="head">
+            <p class="title gradient-text">GALLERY</p>
+          </div>
+          <div class="youtube-video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/HhncPG5SCTk?si=J8MeN8azZH0OXq90"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+          <div class="image-gallery">
+            <div class="image-gallery-row">
+              <div class="card">
+                <img src="img/gallery/p1.jpeg"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/p2.jpeg"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/p3.jpeg"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/p4.jpeg"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/p5.jpeg"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/p6.jpeg"/>
+              </div>
+
+              <div class="card">
+                <img src="img/gallery/0c20d04a-e4cb-436e-bfd8-3dfb3a2a1aa0.JPG"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/IMG_0600.JPG"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/IMG_0752.JPG"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/IMG_0752.JPG"/>
+              </div>
+              <div class="card">
+                <img src="img/gallery/IMG_1051.JPG"/>
+              </div>
             </div>
-            <div class="cta-side">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6726500905793!2d72.9124947096736!3d19.04749202311294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6093a944e21%3A0x4100083198c7136f!2sSai%20Commercial%20Centre%20Co-op.%20Society%20Ltd.!5e0!3m2!1sen!2sin!4v1703481627768!5m2!1sen!2sin"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+          </div>
         </div>
+      </div>
+    </section>
+  </div>
+</div>
+<div class="section footer-bg" id="footer">
+  <div class="contact-us">
+    <div class="content-side">
+      <p class="content-title gradient-text">Reach out!</p>
+      <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
+        Govandi,
+        Mumbai - 400 088</p>
+      <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
+      <p class="mail"><b>Email:</b> bhamragroup@gmail.com
     </div>
-    <footer class="footer-bg">
-        Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
-    </footer>
+    <div class="cta-side">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6726500905793!2d72.9124947096736!3d19.04749202311294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6093a944e21%3A0x4100083198c7136f!2sSai%20Commercial%20Centre%20Co-op.%20Society%20Ltd.!5e0!3m2!1sen!2sin!4v1703481627768!5m2!1sen!2sin"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</div>
+<footer class="footer-bg">
+  Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
+</footer>
 </body>
 </html>
 
