--- a/accreditation.html
+++ b/accreditation.html
@@ -104,6 +104,10 @@
                 <img src="img/gallery/IMG_6421.jpg"/>
                 <p class="caption">Sany</p>
               </div>
+              <div class="card">
+                <img src="img/gallery/adani.jpeg"/>
+                <p class="caption">Adani</p>
+              </div>
             </div>
           </div>
         </div>
